# discord-vc-notification

./: ChangeLog.md  Dockerfile  README.md  cabal.project  discord-vc-notification.cabal  docker.cabal.config  package.yaml  stack.yaml
app/: Discord.hs  Main.hs  dvn-connect.hs  dvn-heartbeat.hs  dvn-identify.hs  dvn-post.hs  dvn-update.hs  dvn-watchlist.hs
tutorial/: dvn-connect.hs  dvn-heartbeat.hs  dvn-identify.hs  dvn-post.hs  dvn-update.hs  dvn-watchlist.hs
