cabal-version:  2.4
name:           discord-vc-notification
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/fumieval/discord-vc-notification#readme>
homepage:       https://github.com/fumieval/discord-vc-notification#readme
bug-reports:    https://github.com/fumieval/discord-vc-notification/issues
author:         Fumiaki Kinoshita
maintainer:     fumiexcel@gmail.com
copyright:      Copyright (c) 2017 Fumiaki Kinoshita
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/fumieval/discord-vc-notification

executable discord-vc-notification
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -Wall -O2
  other-modules:
    Discord
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , rio
    , text
    , time
    , unliftio
    , unordered-containers
    , websockets
    , wuss
  default-language: Haskell2010
  default-extensions:
    NoImplicitPrelude
    ImportQualifiedPost

executable dvn-connect
  main-is: dvn-connect.hs
  hs-source-dirs:
      tutorial
  ghc-options: -threaded -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , rio
    , text
    , time
    , unliftio
    , unordered-containers
    , websockets
    , wuss
  default-language: Haskell2010

executable dvn-heartbeat
  main-is: dvn-heartbeat.hs
  hs-source-dirs:
      tutorial
  ghc-options: -threaded -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , rio
    , text
    , time
    , unliftio
    , unordered-containers
    , websockets
    , wuss
  default-language: Haskell2010

executable dvn-identify
  main-is: dvn-identify.hs
  hs-source-dirs:
      tutorial
  ghc-options: -threaded -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , rio
    , text
    , time
    , unliftio
    , unordered-containers
    , websockets
    , wuss
  default-language: Haskell2010

executable dvn-post
  main-is: dvn-post.hs
  hs-source-dirs:
      tutorial
  ghc-options: -threaded -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , rio
    , text
    , time
    , unliftio
    , unordered-containers
    , websockets
    , wuss
  default-language: Haskell2010

executable dvn-update
  main-is: dvn-update.hs
  hs-source-dirs:
      tutorial
  ghc-options: -threaded -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , rio
    , text
    , time
    , unliftio
    , unordered-containers
    , websockets
    , wuss
  default-language: Haskell2010

executable dvn-watchlist
  main-is: dvn-watchlist.hs
  hs-source-dirs:
      tutorial
  ghc-options: -threaded -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , rio
    , text
    , time
    , unliftio
    , unordered-containers
    , websockets
    , wuss
  default-language: Haskell2010
